[package]
name = "circuits-halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02"}
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02"}
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits"}
gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits"}
merkle-sum-tree-rust = { git = "https://github.com/summa-dev/merkle-sum-tree-rust"}
plotters = { version = "0.3.4", optional = true }
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }