[package]
name = "circuits-halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits"}
plotters = { version = "0.3.4", optional = true }
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
num-bigint = "0.4"
