[package]
name = "summa-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
summa-hyperplonk = { path = "../prover" }
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", optional = true }
csv = "1.2.2"
futures = "0.3.28"
num-bigint = "0.4.3"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.13"
bincode = "1.3.3"
num-traits = "0.2.14"
rand = "0.8.5"
plonkish_backend = { git = "https://github.com/summa-dev/plonkish", branch="feat-read-params", package = "plonkish_backend", features= ["frontend-halo2", "benchmark"] }
