[package]
name = "summa-solvency"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
profiling = []
no_range_check = []


[dependencies]
halo2_proofs = { git = "https://github.com/summa-dev/halo2"}
plotters = { version = "0.3.4", optional = true }
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
num-bigint = "0.4"
num_cpus = "1.15"
itertools = "0.10.3"
ethers = { version = "2.0.7", default-features = false, features = ["ethers-solc"] }
regex-simple = { version = "1", package = "regex" }
num-traits = "0.2.16"
rayon = "1.8.0"
halo2_solidity_verifier = { git = "https://github.com/summa-dev/halo2-solidity-verifier", version = "0.1.0", features = ["evm"] }

[dev-dependencies]
criterion= "0.3"

[[bench]]
name = "kzg"
harness = false

[[bin]]
name = "generate_verifier"
path = "bin/gen_verifier.rs"

[[bin]]
name = "generate_commitment_and_proofs"
path = "bin/gen_commit_and_proofs.rs"
