[package]
name = "summa-hyperplonk"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
default = ["parallel", "frontend-halo2"]

parallel = ["dep:rayon"]
frontend-halo2 = ["dep:halo2_proofs"]

[dependencies]
plonkish_backend = { git = "https://github.com/han0110/plonkish", package = "plonkish_backend", features= ["frontend-halo2", "benchmark"] }
plotters = { version = "0.3.4", optional = true }
rand = "0.8"
csv = "1.1"
num-bigint = "0.4"

# parallel
rayon = { version = "1.5.3", optional = true }

# frontend-halo2
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", optional = true }

[dev-dependencies]
criterion= "0.3"

[[bench]]
name = "proof_of_liabilities"
harness = false