[package]
name = "summa-solvency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
ecdsa = { git = "https://github.com/privacy-scaling-explorations/halo2wrong"}
ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong"}
maingate =  { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_04_20" }
gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits"}
plotters = { version = "0.3.4", optional = true }
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
num-bigint = "0.4"
num_cpus = "1.15"
snark-verifier-sdk = { git = "https://github.com/privacy-scaling-explorations/snark-verifier"}
itertools = "0.10.3"
ethers = { version = "2.0.7", default_features = false, features = ["ethers-solc"] }
regex-simple = { version = "1", package = "regex" }

[dev-dependencies]
criterion= "0.3"

[[bench]]
name = "full_solvency_flow"
harness = false
